--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,15 @@ services:
     restart: unless-stopped
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-fallback-postgres-password}
       POSTGRES_DB: ${POSTGRES_DB:-cypex}
+      POSTGREST_DB_PASSWORD: ${POSTGREST_DB_PASSWORD:-fallback-api-password}
     ports:
       - "${POSTGRES_PORT:-5432}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+      - ./db/init.sh:/docker-entrypoint-initdb.d/init.sh:ro
+      - ./db/migrations:/docker-entrypoint-initdb.d/migrations:ro
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-cypex}"]
       interval: 5s
@@ -34,10 +36,10 @@ services:
       postgres:
         condition: service_healthy
     environment:
-      PGRST_DB_URI: postgres://${POSTGREST_DB_USER:-api_user}:${POSTGREST_DB_PASSWORD:-api_password}@postgres:5432/${POSTGRES_DB:-cypex}
+      PGRST_DB_URI: postgres://${POSTGREST_DB_USER:-authenticator}:${POSTGREST_DB_PASSWORD:-fallback-api-password}@postgres:5432/${POSTGRES_DB:-cypex}
       PGRST_DB_SCHEMAS: ${PGRST_DB_SCHEMAS:-api}
       PGRST_DB_ANON_ROLE: ${PGRST_DB_ANON_ROLE:-anon}
-      PGRST_JWT_SECRET: ${JWT_SECRET:-your-super-secret-jwt-key-min-32-chars!!}
+      PGRST_JWT_SECRET: ${JWT_SECRET:-fallback-jwt-secret-min-32-characters!!}
       PGRST_JWT_AUD: ${JWT_AUD:-postgrest}
       PGRST_SERVER_PORT: 3000
       PGRST_LOG_LEVEL: info
@@ -56,8 +58,8 @@ services:
     environment:
       NODE_ENV: ${NODE_ENV:-development}
       PORT: ${AUTH_API_PORT:-4000}
-      DATABASE_URL: postgres://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@postgres:5432/${POSTGRES_DB:-cypex}
-      JWT_SECRET: ${JWT_SECRET:-your-super-secret-jwt-key-min-32-chars!!}
+      DATABASE_URL: postgres://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-fallback-postgres-password}@postgres:5432/${POSTGRES_DB:-cypex}
+      JWT_SECRET: ${JWT_SECRET:-fallback-jwt-secret-min-32-characters!!}
       JWT_EXPIRES_IN: ${JWT_EXPIRES_IN:-15m}
       JWT_ISSUER: ${JWT_ISSUER:-cypex-hire}
       JWT_AUDIENCE: ${JWT_AUDIENCE:-postgrest}
