feat: swagger, set_note_owner. fix: docker-compose

--- a/auth-api/Dockerfile
+++ b/auth-api/Dockerfile
@@ -1,21 +1,22 @@
 FROM node:20-alpine AS base
 ENV NODE_ENV=production
+RUN corepack enable && corepack prepare pnpm@latest --activate
 
 FROM base AS deps
 WORKDIR /app
-COPY package*.json ./
-RUN npm ci
+COPY package.json pnpm-lock.yaml ./
+RUN pnpm install --frozen-lockfile
 
 FROM base AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
-RUN npm run build
+RUN pnpm run build
 
 FROM base AS prod-deps
 WORKDIR /app
-COPY package*.json ./
-RUN npm ci --omit=dev --ignore-scripts
+COPY package.json pnpm-lock.yaml ./
+RUN pnpm install --frozen-lockfile --prod
 
 FROM base AS runner
 WORKDIR /app
