--- a/auth-api/package.json
+++ b/auth-api/package.json
@@ -22,6 +22,7 @@
     "pino-http": "^11.0.0",
     "reflect-metadata": "^0.2.2",
     "routing-controllers": "^0.11.3",
+    "swagger-ui-express": "^5.0.1",
     "typedi": "^0.10.0",
     "zod": "^3.25.7"
   },
@@ -33,11 +34,13 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^24.10.1",
     "@types/pg": "^8.11.10",
+    "@types/swagger-ui-express": "^4.1.8",
     "eslint": "^9.39.1",
-    "typescript-eslint": "^8.18.0",
+    "openapi-types": "^12.1.3",
     "pino-pretty": "^13.1.3",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.18.0"
   },
   "engines": {
     "node": ">=20.0.0"
