--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,7 +54,7 @@ services:
       postgres:
         condition: service_healthy
     environment:
-      NODE_ENV: ${NODE_ENV:-development}
+      NODE_ENV: ${NODE_ENV:-production}
       PORT: ${AUTH_API_PORT:-4000}
       DATABASE_URL: postgres://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-fallback-postgres-password}@postgres:5432/${POSTGRES_DB:-cypex}
       JWT_SECRET: ${JWT_SECRET:-fallback-jwt-secret-min-32-characters!!}
