--- a/auth-api/package.json
+++ b/auth-api/package.json
@@ -9,9 +9,11 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src",
-    "pgtyped": "pgtyped -c pgtyped.config.json"
+    "pgtyped": "pgtyped -c pgtyped.config.json",
+    "pgtyped:watch": "pgtyped -c pgtyped.config.json --watch"
   },
   "dependencies": {
+    "@pgtyped/runtime": "^2.3.0",
     "dotenv": "^17.2.3",
     "express": "^4.22.1",
     "jsonwebtoken": "^9.0.3",
@@ -27,7 +29,6 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@pgtyped/cli": "^2.3.0",
-    "@pgtyped/runtime": "^2.3.0",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^24.10.1",
