--- a/auth-api/package.json
+++ b/auth-api/package.json
@@ -10,7 +10,10 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint src",
     "pgtyped": "pgtyped -c pgtyped.config.json",
-    "pgtyped:watch": "pgtyped -c pgtyped.config.json --watch"
+    "pgtyped:watch": "pgtyped -c pgtyped.config.json --watch",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@pgtyped/runtime": "^2.3.0",
@@ -33,13 +36,17 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^24.10.1",
     "@types/pg": "^8.11.10",
+    "@types/supertest": "^6.0.3",
     "@types/swagger-ui-express": "^4.1.8",
+    "@vitest/coverage-v8": "^4.0.15",
     "eslint": "^9.39.1",
     "openapi-types": "^12.1.3",
     "pino-pretty": "^13.1.3",
+    "supertest": "^7.1.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.18.0"
+    "typescript-eslint": "^8.18.0",
+    "vitest": "^4.0.15"
   },
   "engines": {
     "node": ">=20.0.0"
