--- a/.env.example
+++ b/.env.example
@@ -35,3 +35,8 @@ JWT_SECRET=fallback-jwt-secret-min-32-characters!!
 JWT_EXPIRES_IN=15m
 JWT_ISSUER=cypex-hire
 JWT_AUDIENCE=postgrest
+
+# -----------------------------------------------------------------------------
+# Web Frontend Configuration
+# -----------------------------------------------------------------------------
+WEB_PORT=3001
