--- a/auth-api/package.json
+++ b/auth-api/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@pgtyped/runtime": "^2.3.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.22.1",
     "jsonwebtoken": "^9.0.3",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@pgtyped/cli": "^2.3.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^24.10.1",
